Ajout condition laser et amelioration diverse